# PES-2026---Bridge-Monitor-System

./: .gitignore
Base_station/: README.md  prj.conf  rpi_pico2_rp2350a_m33.overlay
Base_station/src/: base_station.c  main.c  scratch.c
UART_TEST/: commands
UART_TEST/Receiver/: CMakeLists.txt  prj.conf
UART_TEST/Receiver/src/: main.c
UART_TEST/Sender/: CMakeLists.txt  README.MD  prj.conf  rpi_pico2_rp2350a_m33.overlay
UART_TEST/Sender/src/: main.c
include/: I2C_interface.h  base_station.h  isr.h  readings.h  sensor_node.h  thresholds.h  tof.h
sensor_node/: CMakeLists.txt  Kconfig  prj.conf  rpi_pico2_rp2350a_m33.overlay
sensor_node/ISR/: isr.c
sensor_node/drivers/: CMakeLists.txt  Kconfig
sensor_node/drivers/fsr_4xx/: CMakeLists.txt  Kconfig  fsr_4xx.c
sensor_node/drivers/tof/: tof.c
sensor_node/dts/bindings/: fsr_4xx.yaml
sensor_node/inc/: fsr.h
sensor_node/src/: I2C_interface.c  fsr.c  main.c
sensor_node/zephyr/: module.yml
